<resources>
    <string name="app_name">conecta_trabalho</string>
    <string name="login">LOGIN</string>
    <string name="usu_rio">Usuário</string>
    <string name="loginText">Login</string>
    <string name="senha">Senha</string>
    <string name="name">Nome</string>
    <string name="user_logged">Usuário logado</string>
    <string name="error">Erro</string>
    <string name="wrong_user">Usuário ou senha incorretos</string>
    <string name="botaoDeletar">DELETAR</string>
    <string name="anunciante">Anunciante</string>
    <string name="telefone">Telefone</string>
    <string name="ramo">Ramo</string>
    <string name="descri_o">Descrição</string>
    <string name="title_activity_novo_anuncio">NovoAnuncioActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="novo_an_ncio">Novo Anúncio</string>
    <string name="adicionar">Adicionar</string>
    <string name="descri_o_do_servi_o">Descrição do serviço</string>
    <string name="anuncianteNome">Anunciante</string>
    <string name="removed">Anúncio Removido</string>
    <string name="undo">Desfazer</string>
</resources>